[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/Sounds/OST - AngryBoss - Loop.ogg" type="AudioStream" id=1]
[ext_resource path="res://src/Sounds/OST - AngryBoss - Intro.ogg" type="AudioStream" id=2]
[ext_resource path="res://src/Levels/music_player.gd" type="Script" id=3]
[ext_resource path="res://src/System/StateCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Levels/StageSegmentManager.gd" type="Script" id=5]
[ext_resource path="res://src/HUD/intro_text.gd" type="Script" id=6]
[ext_resource path="res://src/HUD/Hud.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Actors/Player/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/HUD/intro.res" type="SpriteFrames" id=9]
[ext_resource path="res://src/Levels/Test/test_tileset.tres" type="TileSet" id=10]
[ext_resource path="res://src/Sounds/OST - Capsule.ogg" type="AudioStream" id=11]
[ext_resource path="res://src/Sounds/38 - MMX - Boss Alert.wav" type="AudioStream" id=12]
[ext_resource path="res://src/Sounds/OST - boss.ogg" type="AudioStream" id=13]
[ext_resource path="res://src/Sounds/OST - boss - Intro.ogg" type="AudioStream" id=14]
[ext_resource path="res://src/Sounds/OST - Stage Clear.ogg" type="AudioStream" id=15]
[ext_resource path="res://src/System/CameraLimits.gd" type="Script" id=16]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/Panda.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/Actors/Bosses/AvalancheYeti/Yeti.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/Actors/Bosses/GravityAntonion/Antonion.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/Actors/Bosses/OpticSunflower/Sunflower.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/Actors/Bosses/CopyReploid/TransformReploid.tscn" type="PackedScene" id=21]
[ext_resource path="res://src/Actors/Bosses/BurnRooster/Rooster.tscn" type="PackedScene" id=22]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/Trilobyte.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/Actors/Bosses/GigaboltManowar/Manowar.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/Mantis.tscn" type="PackedScene" id=25]
[ext_resource path="res://src/Levels/Gateway/MultiBossController.gd" type="Script" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 199, 112 )

[node name="Stage" type="Node2D"]

[node name="Hud" parent="." instance=ExtResource( 7 )]

[node name="Music Player" type="AudioStreamPlayer" parent="."]
pause_mode = 2
bus = "Music"
script = ExtResource( 3 )
boss_intro = ExtResource( 14 )
boss_song = ExtResource( 13 )
angry_boss_intro = ExtResource( 2 )
angry_boss_song = ExtResource( 1 )
stage_clear_song = ExtResource( 15 )
capsule_song = ExtResource( 11 )
play_angry_boss_theme = false

[node name="StateCamera" parent="." instance=ExtResource( 4 )]

[node name="Ready Warning Text" type="AnimatedSprite" parent="StateCamera"]
frames = ExtResource( 9 )
animation = "ready"
script = ExtResource( 6 )

[node name="audioStreamPlayer2" type="AudioStreamPlayer" parent="StateCamera/Ready Warning Text"]
stream = ExtResource( 12 )
volume_db = -10.0
bus = "SFX"

[node name="X" parent="." instance=ExtResource( 8 )]
position = Vector2( 232, 190 )
skip_intro = true

[node name="Scenery" type="Node" parent="."]

[node name="Collision" type="TileMap" parent="Scenery"]
z_index = 1
tile_set = ExtResource( 10 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1, 7, 0, -65536, 7, 0, -65535, 7, 0, -65534, 7, 0, -65533, 7, 0, -65532, 7, 0, -65531, 7, 0, -65530, 7, 0, -65529, 7, 0, -65528, 7, 0, -65527, 7, 0, -65526, 7, 0, -65525, 7, 0, -65524, 7, 0, -65523, 7, 0, -65522, 7, 0, -65521, 7, 0, -65520, 7, 0, -65519, 7, 0, -65518, 7, 0, -65517, 7, 0, -65516, 7, 0, -65515, 7, 0, -65514, 7, 0, -65513, 7, 0, -65512, 7, 0, -65511, 7, 0, -65510, 7, 0, -65509, 7, 0, 65535, 7, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 17, 7, 0, 18, 7, 0, 19, 7, 0, 20, 7, 0, 21, 7, 0, 22, 7, 0, 23, 7, 0, 24, 7, 0, 25, 7, 0, 26, 7, 0, 27, 7, 0, 131071, 7, 0, 65536, 7, 0, 65537, 7, 0, 65538, 7, 0, 65562, 7, 0, 65563, 7, 0, 196607, 7, 0, 131072, 7, 0, 131073, 7, 0, 131074, 7, 0, 131098, 7, 0, 131099, 7, 0, 262143, 7, 0, 196608, 7, 0, 196609, 7, 0, 196610, 7, 0, 196634, 7, 0, 196635, 7, 0, 327679, 7, 0, 262144, 7, 0, 262145, 7, 0, 262146, 7, 0, 262170, 7, 0, 262171, 7, 0, 393215, 7, 0, 327680, 7, 0, 327681, 7, 0, 327682, 7, 0, 327706, 7, 0, 327707, 7, 0, 458751, 7, 0, 393216, 7, 0, 393217, 7, 0, 393218, 7, 0, 393242, 7, 0, 393243, 7, 0, 524287, 7, 0, 458752, 7, 0, 458753, 7, 0, 458754, 7, 0, 458778, 7, 0, 458779, 7, 0, 589823, 7, 0, 524288, 7, 0, 524289, 7, 0, 524290, 7, 0, 524314, 7, 0, 524315, 7, 0, 655359, 7, 0, 589824, 7, 0, 589825, 7, 0, 589826, 7, 0, 589850, 7, 0, 589851, 7, 0, 720895, 7, 0, 655360, 7, 0, 655361, 7, 0, 655362, 7, 0, 655386, 7, 0, 655387, 7, 0, 786431, 7, 0, 720896, 7, 0, 720897, 7, 0, 720898, 7, 0, 720922, 7, 0, 720923, 7, 0, 851967, 7, 0, 786432, 7, 0, 786433, 7, 0, 786434, 7, 0, 786458, 7, 0, 786459, 7, 0, 917503, 7, 0, 851968, 7, 0, 851969, 7, 0, 851970, 7, 0, 851971, 7, 0, 851972, 7, 0, 851973, 7, 0, 851974, 7, 0, 851975, 7, 0, 851976, 7, 0, 851977, 7, 0, 851978, 7, 0, 851979, 7, 0, 851980, 7, 0, 851981, 7, 0, 851982, 7, 0, 851983, 7, 0, 851984, 7, 0, 851985, 7, 0, 851986, 7, 0, 851987, 7, 0, 851988, 7, 0, 851989, 7, 0, 851990, 7, 0, 851991, 7, 0, 851992, 7, 0, 851993, 7, 0, 851994, 7, 0, 851995, 7, 0, 983039, 7, 0, 917504, 7, 0, 917505, 7, 0, 917506, 7, 0, 917507, 7, 0, 917508, 7, 0, 917509, 7, 0, 917510, 7, 0, 917511, 7, 0, 917512, 7, 0, 917513, 7, 0, 917514, 7, 0, 917515, 7, 0, 917516, 7, 0, 917517, 7, 0, 917518, 7, 0, 917519, 7, 0, 917520, 7, 0, 917521, 7, 0, 917522, 7, 0, 917523, 7, 0, 917524, 7, 0, 917525, 7, 0, 917526, 7, 0, 917527, 7, 0, 917528, 7, 0, 917529, 7, 0, 917530, 7, 0, 917531, 7, 0 )

[node name="UnclimbableWalls" type="TileMap" parent="Scenery/Collision"]
modulate = Color( 1, 0, 0, 1 )
tile_set = ExtResource( 10 )
cell_size = Vector2( 16, 16 )
collision_layer = 256
collision_mask = 256
format = 1
tile_data = PoolIntArray( -131071, 7, 0, -131070, 7, 0, -131069, 7, 0, -131068, 7, 0, -65536, 7, 0, -65535, 7, 0, -65534, 7, 0, -65533, 7, 0, -65532, 7, 0, -65531, 7, 0, -65530, 7, 0, -65529, 7, 0, -65528, 7, 0, -65527, 7, 0, -65526, 7, 0, -65525, 7, 0, -65524, 7, 0, -65523, 7, 0, -65522, 7, 0, -65521, 7, 0, -65520, 7, 0, -65519, 7, 0, -65518, 7, 0, -65517, 7, 0, -65516, 7, 0, -65515, 7, 0, -65514, 7, 0, -65513, 7, 0, -65512, 7, 0, -65511, 7, 0, -65510, 7, 0, -65509, 7, 0, 0, 7, 0, 1, 7, 0, 27, 7, 0, 65536, 7, 0, 65537, 7, 0, 65563, 7, 0, 131072, 7, 0, 131073, 7, 0, 131099, 7, 0, 196608, 7, 0, 196609, 7, 0, 196635, 7, 0, 262144, 7, 0, 262145, 7, 0, 262171, 7, 0, 327680, 7, 0, 327681, 7, 0, 327707, 7, 0, 393216, 7, 0, 393217, 7, 0, 393243, 7, 0, 393244, 7, 0, 458752, 7, 0, 458753, 7, 0, 458779, 7, 0, 458780, 7, 0, 524288, 7, 0, 524289, 7, 0, 524315, 7, 0, 524316, 7, 0, 589824, 7, 0, 589825, 7, 0, 589851, 7, 0, 589852, 7, 0, 655360, 7, 0, 655361, 7, 0, 655387, 7, 0, 655388, 7, 0, 720896, 7, 0, 720897, 7, 0, 720923, 7, 0, 786432, 7, 0, 786433, 7, 0, 786459, 7, 0, 917503, 7, 0, 851968, 7, 0, 851969, 7, 0, 851995, 7, 0, 983039, 7, 0, 917504, 7, 0, 917505, 7, 0, 917506, 7, 0, 917507, 7, 0, 917508, 7, 0, 917509, 7, 0, 917510, 7, 0, 917511, 7, 0, 917512, 7, 0, 917513, 7, 0, 917514, 7, 0, 917515, 7, 0, 917516, 7, 0, 917517, 7, 0, 917518, 7, 0, 917519, 7, 0, 917520, 7, 0, 917521, 7, 0, 917522, 7, 0, 917523, 7, 0, 917524, 7, 0, 917525, 7, 0, 917526, 7, 0, 917527, 7, 0, 917528, 7, 0, 917529, 7, 0, 917530, 7, 0, 917531, 7, 0 )

[node name="StageSegments" type="Node2D" parent="Scenery"]
script = ExtResource( 5 )

[node name="Checkpoints" type="Node" parent="."]

[node name="Objects" type="Node2D" parent="."]

[node name="TrilobyteReploid" parent="Objects" instance=ExtResource( 21 )]
position = Vector2( 76, 180 )
active = false
boss = ExtResource( 23 )

[node name="PandaReploid" parent="Objects" instance=ExtResource( 21 )]
position = Vector2( 106, 180 )
active = false
unique_time = 0.7
boss = ExtResource( 17 )

[node name="YetiReploid" parent="Objects" instance=ExtResource( 21 )]
position = Vector2( 136, 180 )
active = false
unique_time = 0.3
boss = ExtResource( 18 )

[node name="AntonionReploid" parent="Objects" instance=ExtResource( 21 )]
position = Vector2( 166, 180 )
active = false
unique_time = 0.6
boss = ExtResource( 19 )

[node name="ManowarReploid" parent="Objects" instance=ExtResource( 21 )]
position = Vector2( 299, 180 )
active = false
unique_time = 0.75
boss = ExtResource( 24 )

[node name="RoosterReploid" parent="Objects" instance=ExtResource( 21 )]
position = Vector2( 329, 180 )
active = false
unique_time = 0.55
boss = ExtResource( 22 )

[node name="SunflowerReploid" parent="Objects" instance=ExtResource( 21 )]
position = Vector2( 359, 180 )
active = false
unique_time = 0.42
boss = ExtResource( 20 )

[node name="MantisReploid" parent="Objects" instance=ExtResource( 21 )]
position = Vector2( 389, 180 )
unique_time = 0.6
boss = ExtResource( 25 )

[node name="MultiBossController" type="Node" parent="Objects"]
script = ExtResource( 26 )

[node name="Limits" type="Node2D" parent="."]

[node name="boss" type="Area2D" parent="Limits"]
position = Vector2( 234, 112 )
z_index = 3
collision_layer = 2048
collision_mask = 0
script = ExtResource( 16 )

[node name="collisionShape2D" type="CollisionShape2D" parent="Limits/boss"]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[connection signal="animation_finished" from="StateCamera/Ready Warning Text" to="StateCamera/Ready Warning Text" method="_on_animatedSprite_animation_finished"]
